Fix spacing of title and form field on page

--- a/client/src/InputBar.css
+++ b/client/src/InputBar.css
@@ -36,7 +36,7 @@ input.notClicked {
 }
 
 form.notClicked {
-	margin-left: -18%;
+	margin-left: -15%;
 	transition: margin-left 400ms ease-in;	
 }
 
